--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,8 +5,53 @@
 * change
 - removal
 
-vur
-+
+v0.9 2017-01-29
+* updated for grandarmory v0.5
 
-v0.1 2017-01-02
-+
+v0.8b 2017-01-26
+* grandarmory greatmace and spellbook hotfix
+
+v0.8a 2017-01-08
+* quarterstaff hotifx
+
+v0.8 2017-01-07
++ grandarmory compatibity
++ weapon parts
+
+v0.7 2016-11-27
++ quarterstaff compatibility
++ manufacturers touch compatibility
++ ewg compatibility
++ snubnose armory compatibility
++ gun parts
++ shortsword parts
+
+v0.6 2016-11-22
++ stuff
+
+v0.5 2016-11-19
++ branding
++ steam id
+
+v0.4 2016-11-18
++ hammer blades
+
+v0.3 2016-11-17
++ axe blades
++ hammer parts
++ spear parts
++ wand parts
++ staff parts
++ namegen
+
+
+v0.2 2016-11-11
++ broadsword parts
++ dagger parts
++ wand parts
++ staff parts
+* broadsword fixes
+
+v0.1 2016-11-09
++ 17 broadsword blades
++ 11 broadsword handles
